<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Remember Names</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="change_photo">Change Photo</string>
    <string name="title_edit_connection">Edit profile</string>
    <string name="title_add_new_connection">Add new profile</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_tags">Tags</string>
    <string name="unsaved_changes_dialog_msg">Save or discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="first_name_required">First name is required.</string>
    <string name="delete_connection_dialog_msg">Are you sure you want to delete this profile?</string>
    <string name="swipe_delete_title">Delete %1$s?</string>
    <string name="swipe_delete_message">This profile and its stored photos will be permanently deleted.</string>
    <string name="delete">Delete</string>
    <string name="delete_error_msg">Could not delete this profile. Please try again.</string>
    <string name="delete_success_msg">A profile has been deleted!</string>
    <string name="share">Share</string>
    <string name="share_this_profile">Share this profile</string>
    <string name="share_msg_1">Hey, I\'m sharing this profile with you. First name:</string>
    <string name="share_msg_2">. We met at:</string>
    <string name="share_msg_3">. Appearance:</string>
    <string name="share_msg_4">. Feature:</string>
    <string name="share_msg_5">. Common friends:</string>
    <string name="share_msg_6">. Description:</string>
    <string name="where_did_you_meet">Where did you meet?</string>
    <string name="anything_significant_about_appearance">Anything significant about his/her looks?</string>
    <string name="what_is_special">What\'s special about him/her?</string>
    <string name="common_friends">Common friends:</string>
    <string name="more_description">More description:</string>
    <string name="name">Name:</string>
    <string name="hint_first_name">first name (required)</string>
    <string name="hint_we_met_at">we met at...</string>
    <string name="hint_his_her_look_is">his/her look is...</string>
    <string name="hint_feature">he/she really impressed me...</string>
    <string name="hint_common_friends">our common friend is...</string>
    <string name="hint_more_description">more description...</string>
    <string name="new_profile_insertion_msg">A new profile is inserted.</string>
    <string name="data_loading_error">There was an error loading data. Please try again later, or clean the data for this app.</string>
    <string name="empty_view_msg">Met someone today? Create a profile for him/her here.</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="tags">Tags:</string>
    <string name="create_a_tag">Create a tag</string>
    <string name="last_name">last name</string>
    <string name="confirm_to_exit">Are you sure you want to exit?</string>
    <string name="press_back_to_exit">Press back once more to exit.</string>
    <string name="play_store_url" translatable="false">https://play.google.com/store/apps/details?id=me.anky.connectid</string>
    <string name="invite_share_message">Hi. This app can help you remember people\'s names and organise your contacts. You can download it here: %1$s</string>
    <string name="activity_label_tags">Tags</string>
    <string name="tag_with_count" translatable="false"><xliff:g id="tag_label">%1$s</xliff:g> (<xliff:g id="count_of_ids">%2$d</xliff:g>)</string>
    <string name="no_connection_tag">No connections for this tag.</string>
    <string name="tags_a_z"><![CDATA[Tags A->Z]]></string>
    <string name="tags_z_a"><![CDATA[Tags Z->A]]></string>
    <string name="selected_connections_activity_title">Tag - %s</string>
    <string name="put_a_name_on_this_tag">Put a name on this tag</string>
    <string name="delete_tag">DELETE TAG</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_tag_msg">Connections with this tag won\'t be deleted. Do you want to delete this tag?</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="nav_all_tags">All Tags</string>
    <string name="nav_flashcards">Flashcards</string>
    <string name="nav_ad_free">Ad Free</string>
    <string name="nav_ad_free_active">Ad Free (Active)</string>
    <string name="all_tags">All Tags:</string>
    <string name="nav_invite_friends">Invite Friends</string>
    <string name="nav_exit">Exit</string>
    <string name="search">Search</string>
    <string name="activity_label_flashcards">Flashcards</string>
    <string name="flashcards_not_enough_images">Add at least two profiles with photos to use Flashcards.</string>
    <string name="flashcards_next">Next</string>
    <string name="flashcards_hint">Tap the image to reveal the contact name and details.</string>
    <string name="flashcards_end_of_game_message">You have reached the end of your flashcards. Do you want to keep going?</string>
    <string name="flashcards_continue">Continue</string>
    <string name="flashcards_exit">Exit</string>
    <string name="flashcards_progress">%1$d of %2$d</string>
    <string name="flashcards_reveal">Reveal</string>
    <string name="flashcards_rate_hint">How well did you remember this person?</string>
    <string name="flashcards_again">Again</string>
    <string name="flashcards_hard">Hard</string>
    <string name="flashcards_got_it">Got it</string>
    <string name="flashcards_results_title">Session complete</string>
    <string name="flashcards_results_summary">Remembered: %1$d\nHard: %2$d\nAgain: %3$d</string>
    <string name="flashcards_review_again">Review difficult cards</string>
    <string name="flashcards_done">Done</string>
    <string name="flashcards_met_at">Met at: %1$s</string>
    <string name="flashcards_appearance">Looks: %1$s</string>
    <string name="flashcards_memorable_detail">Remember: %1$s</string>
    <string name="flashcards_save_error">Could not save review progress.</string>
    <string name="flashcards_reveal_accessibility">Reveal the name on card %1$d</string>
    <string name="flashcards_revealed_accessibility">Name revealed: %1$s</string>
    <string name="flashcards_today">Today</string>
    <string name="flashcards_daily_progress">%1$d of %2$d reviews completed</string>
    <string name="flashcards_streak_summary">Current streak: %1$d days | Best: %2$d days</string>
    <string name="flashcards_daily_goal">Daily goal</string>
    <string name="flashcards_mastery">Progress and mastery</string>
    <string name="flashcards_due_metric">%1$d due</string>
    <string name="flashcards_mastered_metric">%1$d/%2$d mastered</string>
    <string name="flashcards_accuracy_metric">%1$d%% accuracy</string>
    <string name="flashcards_mastery_breakdown">New: %1$d | Learning: %2$d | Mastered: %3$d</string>
    <string name="flashcards_build_session">Build a session</string>
    <string name="flashcards_deck">Deck</string>
    <string name="flashcards_all_contacts">All contacts</string>
    <string name="flashcards_session_length">Session length</string>
    <string name="flashcards_session_5">5 cards</string>
    <string name="flashcards_session_10">10 cards</string>
    <string name="flashcards_session_20">20 cards</string>
    <string name="flashcards_session_30">30 cards</string>
    <string name="flashcards_deck_summary">%1$d contacts | %2$d due | %3$d in this session</string>
    <string name="flashcards_start_session">Start session</string>
    <string name="flashcards_not_enough_deck_images">This deck needs at least two contacts with photos.</string>
    <string name="flashcards_reminders">Reminders</string>
    <string name="flashcards_daily_reminder">Daily practice reminder</string>
    <string name="flashcards_reminder_time">Reminder time: %1$s</string>
    <string name="flashcards_reminder_title">Time to remember some names</string>
    <string name="flashcards_reminder_message">A short review keeps your connections fresh.</string>
    <string name="flashcards_reminder_permission_error">Notifications are disabled, so the reminder was not saved.</string>
    <string name="newest_first_default">Newest first (default)</string>
    <string name="oldest_first">Oldest first</string>
    <string name="first_name_a_z"><![CDATA[First name A->Z]]></string>
    <string name="first_name_z_a"><![CDATA[First name Z->A]]></string>
    <string name="last_name_a_z"><![CDATA[Last name A->Z]]></string>
    <string name="last_name_z_a"><![CDATA[Last name Z->A]]></string>
    <string name="delete_this_connection">DELETE THIS CONNECTION</string>
    <string name="image_of_the_connection">image of the connection</string>
    <string name="icon_of_a_camera">icon of a camera</string>
    <string name="fullscreen_contact_photo">Full-screen contact photo</string>
    <string name="close_fullscreen_photo">Close full-screen photo</string>
    <string name="image_for_no_connections">image shown when there is no connections</string>
    <string name="image_shown_for_tag_with_no_connections">image shown when this tag has no connections</string>
    <string name="image_shown_for_no_tags">image shown when there are no tags.</string>
    <string name="share_msg_7">. Last name:</string>
    <string name="add_a_tag">Add a Tag</string>
    <string name="data_load_error">Error. Please try again later.</string>
    <string name="email_the_database">Email the Database</string>
    <string name="export_databse_title">Email Complete Backup</string>
    <string name="export_database_msg">Create a ZIP backup containing your contacts, flashcard progress, tags, and contact photos?</string>
    <string name="export_database_email_subject">Remember Names complete backup</string>
    <string name="export_database_email_message">This ZIP contains your Remember Names database and contact photos. Keep it private and use Import Database in the app to restore it.</string>
    <string name="export_database_chooser">Share Complete Backup</string>
    <string name="export_database_failed_title">Could Not Create Backup</string>
    <string name="export_database_failed_message">The complete backup could not be created. Check available storage and try again.</string>
    <string name="import_the_database">Import Database</string>
    <string name="import_database_title">Import Database Backup</string>
    <string name="import_database_action">Import</string>
    <string name="import_database_confirm">Import %1$d contacts? Your current contacts will be kept and exact duplicates will be skipped.</string>
    <string name="import_database_archive_photos">This backup contains %1$d contact image files.</string>
    <string name="import_database_csv_no_photos">This older CSV backup does not contain photo files.</string>
    <string name="import_database_invalid_rows">%1$d incomplete rows will be ignored.</string>
    <string name="import_database_no_contacts">No valid contacts were found in this backup.</string>
    <string name="import_database_complete">Import Complete</string>
    <string name="import_database_result">Imported: %1$d\nExisting matches: %2$d\nIncomplete rows skipped: %3$d\nContacts with photos restored: %4$d</string>
    <string name="import_database_missing_photos">%1$d contacts used the default portrait because their original photo files were not available on this device.</string>
    <string name="import_database_failed_title">Could Not Import Backup</string>
    <string name="ad_unit_id_banner">ca-app-pub-5943597081127232/3001666575</string>
</resources>