<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".connections.ConnectionsActivity">

    <item android:id="@+id/action_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/sortby_date_new"
        android:orderInCategory="8"
        android:title="@string/newest_first_default"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortby_date_old"
        android:orderInCategory="10"
        android:title="@string/oldest_first"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortby_fname_a"
        android:orderInCategory="20"
        android:title="@string/first_name_a_z"
        app:showAsAction="never" />

    <item
        android:id="@+id/sortby_fname_z"
        android:orderInCategory="30"
        android:title="@string/first_name_z_a"
        app:showAsAction="never" />

    <item
        android:id="@+id/sortby_lname_a"
        android:orderInCategory="40"
        android:title="@string/last_name_a_z"
        app:showAsAction="never" />

    <item
        android:id="@+id/sortby_lname_z"
        android:orderInCategory="50"
        android:title="@string/last_name_z_a"
        app:showAsAction="never" />

</menu>