<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="me.anky.connectid.selectedConnections.SelectedConnectionsActivity">

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="@dimen/margin_24dp"
        android:paddingStart="@dimen/margin_24dp"
        android:paddingBottom="@dimen/margin_48dp">

        <ImageView
            android:layout_width="@dimen/empty_view_image_size"
            android:layout_height="@dimen/empty_view_image_size"
            android:src="@drawable/empty_tag"
            android:contentDescription="@string/image_shown_for_tag_with_no_connections"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/margin_16dp"
            android:text="@string/put_a_name_on_this_tag"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selected_connections_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_2dp"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingEnd="@dimen/margin_16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_or_icons"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="delete this tag"
            android:text="@string/delete_tag" />

    </LinearLayout>
</LinearLayout>
